# wasp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
tests/: conftest.py  test_wasp.py
tests/infer/: test_arcface.py  test_distance.py  test_scrfd.py  test_swapper.py
tests/infer/detection/: test_arcface.py  test_scrfd.py
tests/retinaface/: test_encode.py  test_loss.py  test_main.py  test_matching.py  test_mining.py  test_model.py  test_numerics.py  test_priorbox.py  test_train.py
wasp/: cli.py  face.py  timer.py
wasp/edge/: init.py
wasp/foreground/: main.py
wasp/infer/: arcface.py  distance.py  nn.py  scrfd.py  swapper.py
wasp/infer/detection/: arcface.py  nn.py  scrfd.py
wasp/retinaface/: augmentations.py  checkpoint.py  closs.py  convert.py  data.mk  data.py  encode.py  experiment.py  fpn.py  inference.py  logger.py  loss.py  matching.py  metrics.py  model.py  monitor.py  pipeline.py  preprocess.py  priors.py  ssd.py  train.py  trainer.py  vanchors.py  vis-augment.py  visualize.py
wasp/retinaface/visualize/: plot.py  (+5 more)
wasp/sift/: clip-segmented.py  detect.py  detection.py  dnn-dino.py  dnn.py  main.py  preprocess.py  segment-detect.py  segment.py  semantic-segmented.py  semantic.py  similarity.py
wasp/similarity/: main.py
wasp/tracker/: annotate.py  boundaries.py  capture.py  color.py  data.py  filter.py  main.py  segments.json  segments.py  track.py  tracker.py  trackers.py
wasp/triangulation/: keypoints-2.py  keypoints.py  main.py  mp.py
(+10 files in other folders)
