[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint]
extend-select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    # "UP",  # pyupgrade
    # "B",   # bugbear
    # "C90", # mccabe
    # "D",  # pydocstyle
    # "ERA",  # eradicate
]
ignore = [
    "E203",
    # "W503",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wasp"
version = "0.0.1"
description = "Your project description"
dependencies = []

[project.scripts]
wasp = "wasp.cli:wasp"
